Fixed findbugs issue in comment.