@@ -537,7 +537,7 @@ public class ResourcesProxy implements Resources {
 //    public void setStatus(int value) {
 //        if (ddStatus!=value) {
 //            java.beans.PropertyChangeEvent evt =
-//                new java.beans.PropertyChangeEvent(this, PROPERTY_STATUS, new Integer(ddStatus), new Integer(value));
+//                new java.beans.PropertyChangeEvent(this, PROPERTY_STATUS, Integer.valueOf(ddStatus), Integer.valueOf(value));
 //            ddStatus=value;
 //            for (int i=0;i<listeners.size();i++) {
 //                ((java.beans.PropertyChangeListener)listeners.get(i)).propertyChange(evt);
